--- a/_external/lato.css
+++ b/_external/lato.css
@@ -2,23 +2,23 @@
   font-family: 'Lato';
   font-style: normal;
   font-weight: 400;
-  src: local('Lato Regular'), local('Lato-Regular'), url(9k-RPmcnxYEPm8CNFsH2gg.woff) format('woff');
+  src: local('Lato Regular'), local('Lato-Regular'), url('Lato-Regular.ttf');
 }
 @font-face {
   font-family: 'Lato';
   font-style: normal;
   font-weight: 700;
-  src: local('Lato Bold'), local('Lato-Bold'), url(wkfQbvfT_02e2IWO3yYueQ.woff) format('woff');
+  src: local('Lato Bold'), local('Lato-Bold'), url('Lato-Bold.ttf');
 }
 @font-face {
   font-family: 'Lato';
   font-style: italic;
   font-weight: 400;
-  src: local('Lato Italic'), local('Lato-Italic'), url(oUan5VrEkpzIazlUe5ieaA.woff) format('woff');
+  src: local('Lato Italic'), local('Lato-Italic'), url('Lato-Italic.ttf');
 }
 @font-face {
   font-family: 'Lato';
   font-style: italic;
   font-weight: 700;
-  src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url(HkF_qI1x_noxlxhrhMQYED8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
+  src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url('Lato-BoldItalic.ttf');
 }
