--- a/spa/templates/traditional.html
+++ b/spa/templates/traditional.html
@@ -1,30 +1,31 @@
-<!doctype html>
-<html class="no-js" lang="en" dir="ltr">
-	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Apresentação tradicional</title>
+{% extends "base.html" %}
 
-		<link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}" type="text/css" media="screen" title="no title" charset="utf-8">
-		<link rel="stylesheet" href="{{ url_for('static', filename='css/foundation.min.css') }}" type="text/css" media="screen" title="no title" charset="utf-8">
-	</head>
-
-	<body>
-		<nav class="top-bar docs-bar hide-for-small" data-topbar>
-			<ul class="title-area">
-				<li class="name">
-					<h1><a href="http://foundation.zurb.com/">Foundation</a></h1>
-				</li>
-			</ul>
-		</nav>
-
-		<div class='row'>
-			<div class='small-12 columns'>
-				Hello.
-			</div>
+{% block content %}
+	<div class='row'>
+		<div class='small-12 columns'>
+			<p class='text-center'>
+				Contador: {{ contador }}
+			</p>
 		</div>
-	</body>
+	</div>
 
-	<script src="{{ url_for('static', filename='js/vendor/jquery.js') }}" type="text/javascript" charset="utf-8"></script>
-	<script src="{{ url_for('static', filename='js/foundation.min.js') }}" type="text/javascript" charset="utf-8"></script>
-</html>
+	<div class='row'>
+		<div class='small-12 columns'>
+			<p class='text-center'>
+				<a id='contador' href='{{ url_for('traditional', contador=contador) }}' class='button radius small'>Incrementar</a>
+			</p>
+		</div>
+	</div>
+{% endblock content %}
 
+{% block scripts %}
+<script>
+	$(function() {
+		console.log({{ contador }});
+		if ({{ contador }} > 1 && {{ contador }} < 10000000) {
+			console.log('valid');
+			$('#contador')[0].click();
+		}
+	});
+</script>
+{% endblock scripts %}
